- fixed header align.

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -112,7 +112,7 @@ header > .container {
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    margin: 1rem 0;
+    margin: 1rem auto;
 }
 
 header > .container > a {
